--- a/public/css/bootstrap-material-design.css
+++ b/public/css/bootstrap-material-design.css
@@ -2765,7 +2765,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: rgba(255,255,255, 0.84);
 }
 .alert.alert-success {
-  background-color: lawngreen;
+  background-color: darkgreen;
   color: rgba(255,255,255, 0.84);
   border-radius: 5px !important;
   box-shadow: 1px 1px 1px 0 rgba(0,0,0,.07),1px 2px 5px 0 rgba(0,0,0,.06) !important;
