--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2706,7 +2706,7 @@ td.product_image_col {
 
 .main_navigation:not(.full_width_nav) > ul > li > a {
     /*border: 1px solid #eaeaea;*/
-    background-color: #fff;
+    /*background-color: #fff;*/
     padding: 16px 18px 17px;
     color: #000;
 }
@@ -8911,7 +8911,7 @@ ul.mobile-menu-icon {
 }
 
 header {
-    background: #0F9D58;
+    background: #e0e0e0;
     width: 100%;
     height: 50px;
     display: block;
@@ -8974,7 +8974,7 @@ ul.box-manage > li + li {
 ul.box-manage > li a {
     display: inline-block;
     height: 35px;
-    border: 1px solid #CFD8DC;
+    /*border: 1px solid #CFD8DC;*/
     padding-left: 12px;
     padding-right: 16px;
     background: #fff;
@@ -9017,7 +9017,7 @@ a.especially {
 
 
 .left_col {
-    background: #F8F8F8;
+    background: #e0e0e0;
     width: 180px;
 }
 
@@ -9077,6 +9077,7 @@ a.especially {
     -moz-border-radius: 3px;
     border-radius: 3px;
     padding: 16px 14px 0;
+    background-color: #fff;
 }
 .box-status {
     width: 150px;
@@ -9276,4 +9277,11 @@ table.listview {
     right: 0;
     top: -28px;
     width: 86px;
+}
+.load_more {
+    text-align: center;
+    border: none;
+}
+.btn-dangtin {
+    background-color: #109d59 !important;
 }
