--- a/public/css/bootstrap-material-design.css
+++ b/public/css/bootstrap-material-design.css
@@ -68,7 +68,7 @@ h6,
 .h2,
 .h3,
 .h4 {
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif ;
+  font-family: "Roboto-Light",sans-serif ;
   font-weight: 300;
 }
 h5,
