--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -282,7 +282,7 @@ img.aligncenter {
 .top_box,
 .bottom_box {
     padding: 15px 19px;
-    background: #fff;
+    /*background: #fff;*/
     border: 1px solid #eaeaea;
     border-left: 1px solid #eaeaea;
     border-right: 1px solid #eaeaea;
@@ -8606,7 +8606,7 @@ a:hover {
 }
 .list_row {
     /*display: table-row;*/
-    height: 285px;
+    height: 335px;
 }
 
 .category_product_cell {
@@ -8615,10 +8615,10 @@ a:hover {
     padding: 0px;
 }
 .list_company_row {
-    height: 260px;
+    height: 272px;
 }
 .list_warehouse_row {
-    height: 260px;
+    height: 335px;
 }
 .company_cell {
     /*height: 220px;*/
@@ -8631,8 +8631,8 @@ a:hover {
     /*margin-left: 15px;*/
     /*padding-left: 10px;*/
     min-height: 175px;
-    overflow: hidden;
-    /*width: 180px;*/
+    /*overflow: hidden;*/
+    width: 217px;
 }
 .warehouse_cell {
     /*height: 290px;*/
@@ -8645,7 +8645,7 @@ a:hover {
     /*margin-left: 15px;*/
     min-height: 175px;
     overflow: hidden;
-    /*width: 180px;*/
+    width: 217px;
 }
 .well.box_1 {
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
@@ -8661,7 +8661,7 @@ a:hover {
 
 .well.box_1:hover {
     -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
-    box-shadow: 0 5px 1px 0 rgba(0, 0, 0, 0.2), 0 0px 1px 0 rgba(0, 0, 0, 0.19) !important;
+    box-shadow: 3px 5px 1px 0 rgba(0, 0, 0, 0.2), 3px 0px 1px 0 rgba(0, 0, 0, 0.09) !important;
 }
 /* .product_bestselt {
     box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, .07), 1px 2px 5px 0 rgba(0, 0, 0, .06) !important;
@@ -8685,14 +8685,17 @@ a:hover {
 
 .company_cell .product_bestselt .company_image {
     height: 190px;
+    overflow: hidden;
     text-align: center;
     border: 1px solid rgba(207, 216, 220, 0.42);
     border-radius: 4px;
 }.company_cell .company_image {
     height: 133px;
     text-align: center;
-    border: 1px solid rgba(207, 216, 220, 0.42);
+    overflow: hidden;
+    /*border: 1px solid rgba(207, 216, 220, 0.42);*/
     border-radius: 4px;
+    margin-bottom: 7px;
 }
 .warehouse_cell .product_bestselt .company_image {
     height: 190px;
@@ -8701,10 +8704,14 @@ a:hover {
     border-radius: 4px;
 }
 .warehouse_cell .company_image {
-    height: 133px;
+    height: 207px;
     text-align: center;
-    border: 1px solid rgba(207, 216, 220, 0.42);
-    border-radius: 4px;
+    /*border: 1px solid rgba(207, 216, 220, 0.42);*/
+    border-radius: 4px 4px 0 0;
+    margin-bottom: 7px;
+}
+.warehouse_cell .box_1 {
+    padding: 0px !important;
 }
 
 .category_product_cell .product_bestselt .image_wrap img {
@@ -8728,9 +8735,23 @@ a:hover {
     border-radius: 4px;
 }
 .warehouse_cell .company_image img {
-    height: 100%;
+    max-height: 100%;
+    object-fit: inherit;
     width: 100%;
-    border-radius: 4px;
+    /*transform: translateY(38%);*/
+
+    max-height: 100%;
+    width: 100%;
+    border-radius: 4px 4px 0 0;
+}
+
+.warehouse_cell .description {
+    padding-bottom: 10px;
+    padding-left: 10px;
+}
+
+.list_warehouse_row.textoverlow {
+    text-transform: uppercase !important;
 }
 
 .category_product_cell .product_bestselt .description {
@@ -8909,7 +8930,7 @@ ul.mobile-menu-icon {
     font-size: 13px;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
-    padding-bottom: 5px;
+    margin-bottom: 7px;
     /*padding-left: 5px;*/
  }
 @media only screen and (max-width:320px) {
@@ -9128,18 +9149,18 @@ a.especially {
 }
 .box-status {
     width: 150px;
-    height: 92px;
+    height: 90px;
     -ms-transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
     position: absolute;
-    top: -75px;
-    right: -55px;
+    top: -74px;
+    right: -56px;
 }
 .box-status .status-title {
     color: #fff;
     padding-top: 66px;
-    font-size: 16px;
+    font-size: 15px;
     text-align: center;
     padding-left: 66px;
 }
@@ -9387,16 +9408,19 @@ table.listview {
     margin: -7px 0px 23px;
 }
 .head {
-    font-family: 'Roboto-Light', sans-serif;
+    font-family: "Roboto",Helvetica,Arial,sans-serif;
     font-size: 36px;
     color: #fff;
     margin-bottom: 32px;
     font-weight: lighter;
 }
 .foot {
-    font-family: 'Roboto-Light', sans-serif;
+    font-family: "Roboto",Helvetica,Arial,sans-serif;
     font-size: 24px;
     color: #fff;
     margin-bottom: 32px;
     font-weight: lighter;
+}
+.padding7 {
+    padding-bottom: 7px;
 }
